<resources>

    <string name="app_name">Phayao Town</string>
    <string name="FACEBOOK_APP_ID">318925955718016</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">aa27fc0971edc4502d8c3cbf13c20cc5</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time :</string>
    <string name="place">Place</string>
    <string name="information">Information :</string>
    <string name="open">Open :</string>
    <string name="cost">Cost :</string>
    <string name="time_bullet">Time : </string>
    <string name="first_place_bullet">Firest Place : </string>
    <string name="time_des">Time</string>
    <string name="time_remain">Time Remain :</string>
    <string name="place_title">Place :</string>
    <string name="destination_route">Destination :</string>
    <string name="start_route">Origin :</string>
    <string name="duration_route">Time :</string>
    <string name="distance_route">Distance :</string>

    <string name="google_maps_key" translatable="false">AIzaSyD11oNHczst4YjOzUvzz-wXo2M09qgV1w8</string>
    <string name="google_server_key" translatable="false">AIzaSyDNU0joRMU2IcJY7zs6PGw8Oa8iSfmzhIw</string>
    <string name="un_authorize_api" translatable="false">UnAuthorize user</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="please_try_again">Please try again</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_activity_main_map">Map</string>
    <string name="search_place">ค้นหาสถานที่</string>

    <string name="permission_denied" translatable="false">Location permission was denied.</string>
    <string name="title_permission_rationale" translatable="false">Access your location</string>
    <string name="enable_location_service" translatable="false">Please enable location service</string>
    <string name="open_location_settings" translatable="false">Open Location Settings</string>
    <string name="can_not_get_data">Sorry! can\'t get data, Please try again.</string>

</resources>
