<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_user_information"
        android:visibility="gone"
        android:weightSum="4"
        android:padding="8dp"
        android:background="@color/colorButton">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_account"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:id="@+id/txt_user_name"
                android:text="Eddy"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt_member_type"
                android:text="Traveler"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </LinearLayout>


    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="3"
           android:padding="8dp">

           <android.support.v7.widget.CardView
               android:id="@+id/card_view_plan"
               android:layout_marginRight="8dp"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               app:cardCornerRadius="8dp"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="50dp"
                       android:layout_height="50dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/ic_plan"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Plan"
                       android:fontFamily="@font/printable"
                       android:layout_gravity="center_horizontal"
                       android:textSize="20sp"/>

               </LinearLayout>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:id="@+id/card_view_recommend"
               android:layout_marginRight="8dp"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               app:cardCornerRadius="8dp"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="50dp"
                       android:layout_height="50dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/ic_notification"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Recommend"
                       android:fontFamily="@font/printable"
                       android:layout_gravity="center_horizontal"
                       android:textSize="20sp"/>

               </LinearLayout>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:id="@+id/card_view_timetable"
               android:layout_marginRight="8dp"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               app:cardCornerRadius="8dp"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <ImageView
                       android:layout_width="50dp"
                       android:layout_height="50dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/ic_date"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Time Table"
                       android:fontFamily="@font/printable"
                       android:layout_gravity="center_horizontal"
                       android:textSize="20sp"/>

               </LinearLayout>

           </android.support.v7.widget.CardView>

       </LinearLayout>

       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:cardCornerRadius="8dp"
           android:visibility="gone"
           android:layout_marginLeft="8dp"
           android:layout_marginRight="8dp"
           android:id="@+id/card_booking_info">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="8dp"
               android:orientation="vertical">

               <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_vertical"
                   android:src="@drawable/ic_event_note_black_24dp"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Your Booking Information"
                   android:layout_marginLeft="8dp"
                   android:textStyle="bold"
                   android:textSize="18sp"
                   android:fontFamily="@font/printable"/>

           </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/first_place_bullet"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/place"
                       android:textStyle="bold"
                       android:id="@+id/first_place"/>

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/time_bullet"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/time_des"
                       android:textStyle="bold"
                       android:id="@+id/txt_time"/>

               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/time_remain"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/time_des"
                       android:textStyle="bold"
                       android:id="@+id/txt_time_remain"/>

               </LinearLayout>


           </LinearLayout>

       </android.support.v7.widget.CardView>

   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

        <ss.com.bannerslider.Slider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/banner_slider"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="Place"
                android:fontFamily="@font/printable"
                android:textColor="@color/colorButton"
                android:textSize="18sp"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_place"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"/>

    </LinearLayout>



</LinearLayout>