<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:foreground="?attr/selectableItemBackground"
        android:visibility="invisible"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/container_card_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="onClick"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:layout_marginEnd="0dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            card_view:cardBackgroundColor="@android:color/darker_gray"
                            card_view:cardCornerRadius="4dp">

                            <android.support.v7.widget.AppCompatImageView
                                android:id="@+id/iv_info"
                                android:layout_width="90dp"
                                android:layout_height="70dp"
                                android:scaleType="centerCrop" />
                        </android.support.v7.widget.CardView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/tv_title_info"
                                style="@style/TitleHeader4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1" />

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/tv_detail_info"
                                style="@style/TextSmallLight"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="2" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_card_two"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="onClick"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@android:color/darker_gray" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <android.support.v7.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:layout_marginEnd="0dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="16dp"
                                card_view:cardBackgroundColor="@android:color/darker_gray"
                                card_view:cardCornerRadius="4dp">

                                <android.support.v7.widget.AppCompatImageView
                                    android:id="@+id/iv_info_two"
                                    android:layout_width="90dp"
                                    android:layout_height="70dp"
                                    android:scaleType="centerCrop" />
                            </android.support.v7.widget.CardView>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/tv_title_info_two"
                                    style="@style/TitleHeader4"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:maxLines="1" />

                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/tv_detail_info_two"
                                    style="@style/TextSmallLight"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:maxLines="2" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_close_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:paddingBottom="16dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="10dp"
                        android:paddingTop="15dp"
                        card_view:srcCompat="@drawable/ic_close" />

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/btn_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="16dp"
                        android:paddingBottom="16dp"
                        android:paddingEnd="16dp"
                        android:paddingStart="10dp"
                        android:paddingTop="15dp"
                        android:visibility="gone"
                        card_view:srcCompat="@drawable/ic_switch" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_info_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TextSmallBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_route" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_start"
                            style="@style/TextSmallRegular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TextSmallBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/destination_route" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_destination"
                            style="@style/TextSmallRegular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:maxLines="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TextSmallBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duration_route" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_duration"
                            style="@style/TextSmallRegular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TextSmallBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/distance_route" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_distance"
                            style="@style/TextSmallRegular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/btn_directions"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    card_view:srcCompat="@drawable/ic_directions" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>